# GoldLabs

./: CMakeLists.txt
Lab1/task_1/: main.c  task1.c
Lab1/task_10/: task10.c
Lab1/task_3/: task3.c
Lab1/task_4/: input.txt  task4.c
Lab1/task_7/: input2.txt  output.txt
Lab1/task_8/: input.txt  output.txt  task8.c
Lab1_1/: main.c
lab1/task2/: functions.c  functions.h  task1_2.c
lab1/task4/: out_input.txt
lab1/task5/: task1_5.c
lab1/task6/: task1_6.c
lab1/task7/: input1.txt  task1_7.c
lab1/task8/: task1_8.c
lab1/task9/: task1_9(1).c  task1_9(2).c
lab1/task_1/: task1.c
lab1/task_3/: task3.c
lab1/task_4/: task4.c
lab1/task_8/: input.txt  output.txt
lab2/task10/: task2_10.c
lab2/task2/: task2_2.c
lab2/task3/: input.txt  input2.txt  task2_3.c
lab2/task4/: task2_4.c
lab2/task7/: task2_7.c
lab2/task8/: task2_8.c
lab2/task9/: task2_9.c
lab2/task_1/: task1.c
lab2/task_2/: task2.c
lab2/task_7/: task7.c
lab3/task2/: functions.c  functions.h  task3_2.c
lab3/task3/: employees_list.txt
lab3/task5/: a_in.txt  student_list.txt
lab3/task_1/: task1.c
lab3/task_3/: output_list.txt  task3.c
lab3/task_5/: task5.c
lab4/task1/: input.txt  output.txt  task4_1.c
lab5/task1/: functions.cpp  functions_etc.h
lab5/task2/: encode.txt  task5_2.cpp
lab5/task3/: task5_3.cpp
